--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 <div class="container-fluid title-container">
   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-    <a class="navbar-brand" href="#"><img src="images/Amaan@3x.png" alt=""></a>
+    <a class="navbar-brand" href="#"><img src="Amaan@3x.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -50,23 +50,23 @@
     <div class="col-sm-12">
       <h1 class="title-heading">Hello! I am <span>Amaan</span></h1>
       <h2 class="title-heading-2">I am a web designer and a web developer</h2>
-      <img class="title-img" src="images/Amaan.png" alt="">
+      <img class="title-img" src="Amaan.png" alt="">
     </div>
   </div>
 </div>
 
 <div class="row logo-row">
   <div class="col-lg-3 col-sm-6 col-md-6">
-    <img src="images/logo1.svg" alt="">
+    <img src="logo1.svg" alt="">
   </div>
   <div class="col-lg-3 col-sm-6 col-md-6">
-    <img src="images/logo2.svg" alt="">
+    <img src="logo2.svg" alt="">
   </div>
   <div class="col-lg-3 col-sm-6 col-md-6">
-    <img src="images/logo3.svg" alt="">
+    <img src="logo3.svg" alt="">
   </div>
   <div class="col-lg-3 col-sm-6  col-md-6">
-    <img src="images/logo4.svg" alt="">
+    <img src="logo4.svg" alt="">
   </div>
 </div>
 
@@ -81,13 +81,13 @@
   <div class="col-lg-6 col-sm-12 col-md-12">
     <h2 class="info-title">I will make your company look  professional online</h2>
     <p class="info-para">Nowadays a lot of people search for your company online before they contact you. A good first impression makes everything easier. Besides that, new websites:</p>
-    <p class="info-para-2"><img class="tick-logo" src="images/Icon vinkje.svg" alt="">Can attract new customers via Google</p>
-    <p class="info-para-2"><img class="tick-logo"src="images/Icon vinkje.svg" alt="">Are perfectly viewable on mobile devices </p>
-    <p class="info-para-2"><img class="tick-logo"src="images/Icon vinkje.svg" alt="">Can take concerns away right away</p>
+    <p class="info-para-2"><img class="tick-logo" src="Icon vinkje.svg" alt="">Can attract new customers via Google</p>
+    <p class="info-para-2"><img class="tick-logo"src="Icon vinkje.svg" alt="">Are perfectly viewable on mobile devices </p>
+    <p class="info-para-2"><img class="tick-logo"src="Icon vinkje.svg" alt="">Can take concerns away right away</p>
 
   </div>
   <div class="col-lg-6 col-sm-12 col-md-12 info-img-cont">
-    <img class="info-img"src="images/portfolio.svg" alt="">
+    <img class="info-img"src="portfolio.svg" alt="">
   </div>
 </div>
 </div>
@@ -101,7 +101,7 @@
      <button type="button" class="btn  btn-lg">Contact Me</button>
   </div>
     <div class="col-lg-6 col-sm-12 col-md-12 call-to-action-col call-action-image">
-<img class="call-to-action-image"src="images/Group 327.svg" alt="">
+<img class="call-to-action-image"src="Group 327.svg" alt="">
     </div>
   </div>
 
@@ -118,7 +118,7 @@
       <p>I use software like adobe xd, languages like html, css, javascript</p>
     </div>
     <div class="col-lg-12 lang lang-img">
-      <img class="lanuages-img" src="images/Group 339.svg" alt="">
+      <img class="lanuages-img" src="Group 339.svg" alt="">
     </div>
   </div>
 </div>
@@ -133,14 +133,14 @@
 <a href="mailto:ansariaman8286@gmail.com" target="_blank"><i class="footer-button   fas fa-envelope "></i></a>
 <p class="footer-title">© Copyright 2020 Amaan</p>
 
-</footer>
 
 
 
 
 
 
-</footer>
+
+
 
 
     <!-- Jquery -->
