button changed to anchor tag

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="col-lg-6 col-sm-12 col-md-12 call-to-action-col">
       <h2 class="call-to-action-heading">Don't Wait Create!</h2>
       <p>I Created that slogan to encourage people and myself to creating. I do not like wase time,We can make world more beautiful  using even little pencil. it is awesome, isn't it</p>
-     <button type="button" class="btn  btn-lg">Contact Me</button>
+     <a href="mailto:ansariaman8286@gmail.com" class="btn  btn-lg" >Contact Me</a>
   </div>
     <div class="col-lg-6 col-sm-12 col-md-12 call-to-action-col call-action-image">
 <img class="call-to-action-image"src="Group 327.svg" alt="">
